NICE inContact Careers - Sr. Software Engineer (Java). Guidewire Software, Inc. Careers - Software Engineer, Full-Stack – Dublin, Ireland. Gigamon Careers - Principle Software Engineer - Data Storage, ETL and Analytics. Software Engineer III | Current Openings. Senior Software Engineer #1200 job at Sojern in San Francisco, CA, powered by JobScore. Kinetica DB Sr. Software Engineer (API Development) | SmartRecruiters. Job Application for Senior Software Engineer, Atlas at Mapbox. SparkPost Careers - Senior Software Engineer. SonetJob | Offre d'emploi - Ingénieurs, Techniciens, Production, Etudes - Software Engineer. Job @ Archilyse (Zürich): Senior Software Developer | JOIN. Palo Alto Networks Careers - Intern - Cloud Software Engineer. Verisk Software Engineer II | SmartRecruiters. VMD Corp Senior Software Engineer (.Net) (Active Security Clearance) | SmartRecruiters. Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters. Aroghia Group Lead Full Stack Cloud Software Engineer for Global Sportswear Brand | SmartRecruiters. SugarCRM Careers - Senior UI Software Engineer. RingCentral Careers - Senior Software Engineer (Multiple Openings). RingCentral Careers - Ruby / Ruby on Rails Software Engineer. RingCentral Careers - Ruby / Ruby on Rails Software Engineer. Guidewire Software, Inc. Careers - Senior Software Engineer – Dublin, Ireland. WW International (formerly Weight Watchers) Careers - Full Stack Software Engineer. Full Stack Software Developer - .NET | PWW Recruiting, LLC. . Full Stack Software Developer - .NET | PWW Recruiting, LLC. . lm group Software Engineer | SmartRecruiters. A10 Networks Careers - Software Engineer_4G.LTE.5G Mobile Security Team. Senior Software Engineer, Product Cybersecurity (AppSec) at OTIS. NICE Careers - Expert Java Software Engineer. Tenable Careers - Senior Software Engineer - UI. Software Developer job with Travelers Insurance | 6409324. Job Application for Senior Software Developer  at Callibrity. 

--- a/software.html
+++ b/software.html
@@ -55,11 +55,11 @@
 <p><span class="badge badge-light">Redmond, WAUnited States  Redmond, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/senior-software-engineer-dvLHss-Yqr6zmuaKjNoogA'>Senior Software Engineer #1200 job at Sojern in San Francisco, CA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/sojern/jobs/senior-software-engineer-dvLHss-Yqr6zmuaKjNoogA'>Senior Software Engineer #1200 job at Sojern in San Francisco, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CASan Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KineticaDB/743999698418010-sr-software-engineer-api-development-'>Kinetica DB Sr. Software Engineer (API Development) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KineticaDB/743999698418010-sr-software-engineer-api-development-'>Kinetica DB Sr. Software Engineer (API Development) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=ogQvafwv&__jvst=Employee&__jvsd=sg2kciwB&__jvsc=Twitter&bid=nZwPoMwZ'>SugarCRM Careers - Senior UI Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=ogQvafwv&__jvst=Employee&__jvsd=sg2kciwB&__jvsc=Twitter&bid=nZwPoMwZ'>SugarCRM Careers - Senior UI Software Engineer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=olvS9fwB&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=neJNoMwp'>WW International (formerly Weight Watchers) Careers - Full Stack Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=olvS9fwB&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=neJNoMwp'>WW International (formerly Weight Watchers) Careers - Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -221,11 +221,11 @@
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oaBf8fwS&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nZmAoMwA'>Guidewire Software, Inc. Careers - Senior Software Engineer Front-End - Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oaBf8fwS&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nZmAoMwA'>Guidewire Software, Inc. Careers - Senior Software Engineer Front-End - Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/enova/jobs/1038726?gh_src=be0ded7e1'>Job Application for Software Engineering Manager at Enova International</a></h5> 
+<h5><a href='https://boards.greenhouse.io/enova/jobs/1038726?gh_src=be0ded7e1'>Job Application for Software Engineering Manager at Enova International</a></h5> 
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -313,7 +313,7 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471431-senior-software-engineer'>SmartRecruiters Inc Senior Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471431-senior-software-engineer'>SmartRecruiters Inc Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -321,11 +321,11 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472121-software-engineer-android'>SmartRecruiters Inc Software Engineer, Android | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472121-software-engineer-android'>SmartRecruiters Inc Software Engineer, Android | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471356-software-engineer-frontend'>SmartRecruiters Inc Software Engineer, Frontend | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471356-software-engineer-frontend'>SmartRecruiters Inc Software Engineer, Frontend | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -347,7 +347,7 @@
 <p><span class="badge badge-light">Wien, Austria</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/algolia/141fc40b-9125-44fe-875f-71d473815354'>Algolia - Software Engineer - Android</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/algolia/141fc40b-9125-44fe-875f-71d473815354'>Algolia - Software Engineer - Android</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -367,7 +367,7 @@
 <p><span class="badge badge-light">Redwood City, CASan Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4491111002'>Job Application for Software Engineer at Anaplan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anaplan/jobs/4491111002'>Job Application for Software Engineer at Anaplan</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -401,7 +401,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5427'>Software Engineer I - SWD -University Recruiting - TriNet Careers</a></h5> 
+<h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5427'>Software Engineer I - SWD -University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -409,7 +409,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5429'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
+<h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5429'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -421,7 +421,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698456640-senior-software-engineer-coverage'>Omio Senior Software Engineer - Coverage | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698456640-senior-software-engineer-coverage'>Omio Senior Software Engineer - Coverage | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -433,7 +433,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://redlatticeinc.applytojob.com/apply/JlnTcxlGzh/Senior-Cyber-Software-Developer'>Senior Cyber Software Developer - REDLattice Inc - Career Page</a></h5> 
+<h5><a href='http://redlatticeinc.applytojob.com/apply/JlnTcxlGzh/Senior-Cyber-Software-Developer'>Senior Cyber Software Developer - REDLattice Inc - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
